--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <nav>
             <ul>
                 <li><a href="index.html">Introduction</a></li>
-                <li><a href="automatic_door.html">Automatic Door & Security Camera</a></li>
+                <li><a href="1st-project.html">Automatic Door & Security Camera</a></li>
                 <li><a href="street_light.html">Automatic Street Light</a></li>
                 <li><a href="contact.html">Contact Me</a></li>
             </ul>
@@ -20,7 +20,8 @@
     </header>
 
     <main>
-        <!-- Your content here -->
+        Automation has transformed our daily lives by enhancing convenience, efficiency, and safety across various aspects. From smart homes with automated lighting and security systems to wearable health devices and smart assistants like Alexa, it simplifies everyday tasks and improves productivity. Automation in cars, navigation, and e-commerce streamlines transportation, shopping, and communication, while smart thermostats and energy-saving systems reduce utility costs and environmental impact. In workplaces, it handles repetitive tasks, allowing more focus on creativity and strategic decision-making. Overall, automation provides comfort, saves time, and creates personalized experiences, significantly shaping how we live and interact.
+
     </main>
 
     <footer>
